# Agentic-Ai

./: .env  README.md  pyproject.toml
college_management/: college.py
langgraph/: langraph_fastapi.py  langraph_memory.py
prompt_engineering/llm_basics/: gemini_llm_stream.py
prompt_engineering/llm_settings/: llm_temperature.py  llm_top_p.py
prompt_engineering/prompting_techniques/: zero_shot.py
rag/: Hotel_Mirage.txt  gemini_agentic_rag.py
todo_agent/: todo_agent.py
websocket_agent/: ws_server_agent.py
